# fastapi-nextjs-fullstack-template

./: .gitignore  LICENSE  README.md
backend/: .env.sample  alembic.ini  generate_template.py  pyproject.toml
backend/alembic/: env.py
backend/app/: .gitignore  docker-compose.yml  main.py  pyproject.toml  start-api.sh
backend/app/alembic/: env.py
backend/app/alembic/versions/: 00c1aea7a21d_initial_commit.py
backend/app/api/: api.py
backend/app/api/api_v1/: api_v1.py
backend/app/api/api_v1/endpoints/: todos.py
backend/app/app/: main.py
backend/app/app/api/: api.py
backend/app/app/api/api_v1/: api_v1.py
backend/app/app/api/api_v1/endpoints/: todos.py
backend/app/app/api/v1/: api_v1.py
backend/app/app/api/v1/endpoints/: login.py  todo_items.py  users.py
backend/app/app/api/v1/endpoints/todo_lists/: __init__.py  todo_items.py  todo_lists.py
backend/app/app/core/: config.py  db.py  security.py
backend/app/app/crud/: __init__.py  base.py  crud_todo.py  crud_todo_item.py  crud_todo_list.py  crud_user.py
backend/app/app/dependencies/: auth.py
backend/app/app/models/: base.py  base_model.py  todo.py  todo_item.py  todo_list.py  user.py
backend/app/app/schamas/: paginated_response.py  token.py
backend/app/core/: config.py  db.py
backend/app/crud/: __init__.py  base.py  crud_todo.py
backend/app/models/: __init__.py  todo.py
backend/app/schemas/: __init__.py  todo_item.py
backend/scripts/: start-api.sh
backend/templates/: crud_template.py.jinja2  (+1 more)
frontend/: openapi-config.ts  package-lock.json  package.json  pnpm-lock.yaml
(+23 files in other folders)
